--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -8,4 +8,8 @@
     <Folder Include="Audit\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
