--- a/Dal.Tests/Dal.Tests.csproj
+++ b/Dal.Tests/Dal.Tests.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj" />
+    <ProjectReference Include="..\Domain\Domain.csproj" />
     <ProjectReference Include="..\Model\Model.csproj" />
   </ItemGroup>
 
